--- a/faqs.html
+++ b/faqs.html
@@ -210,137 +210,148 @@
                 </div>
             </div>
             <div class="row align-items-center">
-                <div class="col-12">
+                <div class="col-8 mx-auto">
                     <div class="accordion" id="accordionExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        <div class="accordion-item my-5">
+                            <h2 class="accordion-headerm-0" id="headingOne">
+                                <button class="accordion-button border-0" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Accordion Item #1
+                                    Lorem Ipsum Dolor Sit Amet?
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the first item's accordion body.</strong> It is shown by default,
-                                    until the collapse
-                                    plugin adds the appropriate classes that we use to style each element. These classes
-                                    control the overall
-                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
-                                    any of this with
-                                    custom CSS or overriding our default variables. It's also worth noting that just
-                                    about any HTML can go
-                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <p class="pb-3 text-secondary fs-3">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit. Curabitur lacus velit,
+                                        ullamcorper sed vulputate at, porttitor
+                                        a sem. Lorem ipsum dolor sit amet,</p>
+                                    <p class="pb-3 text-secondary fs-3">Curabitur lacus velit, ullamcorper sed vulputate
+                                        at, porttitor a sem. Lorem ipsum
+                                        dolor sit amet,</p>
+                                    <p class="pb-3 text-secondary fs-3">Find out more information by <span
+                                            class="green-text">reading the license.</span>
+                                    </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingTwo">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Accordion Item #2
+                        <div class="accordion-item my-5">
+                            <h2 class="accordion-header m-0" id="headingTwo">
+                                <button class="accordion-button border-0 collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                                    aria-controls="collapseTwo">
+                                    Lorem Lorem ipsum dolor Amet?
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
-                                    until the collapse
-                                    plugin adds the appropriate classes that we use to style each element. These classes
-                                    control the overall
-                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
-                                    any of this with
-                                    custom CSS or overriding our default variables. It's also worth noting that just
-                                    about any HTML can go
-                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <p class="pb-3 text-secondary fs-3">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit. Curabitur lacus velit,
+                                        ullamcorper sed vulputate at, porttitor
+                                        a sem. Lorem ipsum dolor sit amet,</p>
+                                    <p class="pb-3 text-secondary fs-3">Curabitur lacus velit, ullamcorper sed vulputate
+                                        at, porttitor a sem. Lorem ipsum
+                                        dolor sit amet,</p>
+                                    <p class="pb-3 text-secondary fs-3">Find out more information by <span
+                                            class="green-text">reading the license.</span>
+                                    </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingThree">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Accordion Item #3
+                        <div class="accordion-item my-5">
+                            <h2 class="accordion-header m-0" id="headingThree">
+                                <button class="accordion-button border-0 collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                                    aria-controls="collapseThree">
+                                    ullamcorper sed vulputate at, porttitor a sem?
                                 </button>
                             </h2>
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
-                                    until the collapse
-                                    plugin adds the appropriate classes that we use to style each element. These classes
-                                    control the overall
-                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
-                                    any of this with
-                                    custom CSS or overriding our default variables. It's also worth noting that just
-                                    about any HTML can go
-                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <p class="pb-3 text-secondary fs-3">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit. Curabitur lacus velit,
+                                        ullamcorper sed vulputate at, porttitor
+                                        a sem. Lorem ipsum dolor sit amet,</p>
+                                    <p class="pb-3 text-secondary fs-3">Curabitur lacus velit, ullamcorper sed vulputate
+                                        at, porttitor a sem. Lorem ipsum
+                                        dolor sit amet,</p>
+                                    <p class="pb-3 text-secondary fs-3">Find out more information by <span
+                                            class="green-text">reading the license.</span>
+                                    </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingfour">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
-                                    Accordion Item #3
+                        <div class="accordion-item my-5">
+                            <h2 class="accordion-header m-0" id="headingfour">
+                                <button class="accordion-button border-0 collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapsefour" aria-expanded="false"
+                                    aria-controls="collapsefour">
+                                    Lorem sit amet, consectetur adipiscing eli Amet?
                                 </button>
                             </h2>
                             <div id="collapsefour" class="accordion-collapse collapse" aria-labelledby="headingfour"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
-                                    until the collapse
-                                    plugin adds the appropriate classes that we use to style each element. These classes
-                                    control the overall
-                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
-                                    any of this with
-                                    custom CSS or overriding our default variables. It's also worth noting that just
-                                    about any HTML can go
-                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <p class="pb-3 text-secondary fs-3">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit. Curabitur lacus velit,
+                                        ullamcorper sed vulputate at, porttitor
+                                        a sem. Lorem ipsum dolor sit amet,</p>
+                                    <p class="pb-3 text-secondary fs-3">Curabitur lacus velit, ullamcorper sed vulputate
+                                        at, porttitor a sem. Lorem ipsum
+                                        dolor sit amet,</p>
+                                    <p class="pb-3 text-secondary fs-3">Find out more information by <span
+                                            class="green-text">reading the license.</span>
+                                    </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingfive">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
-                                    Accordion Item #3
+                        <div class="accordion-item my-5">
+                            <h2 class="accordion-header m-0" id="headingfive">
+                                <button class="accordion-button border-0 collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapsefive" aria-expanded="false"
+                                    aria-controls="collapsefive">
+                                    Curabitur lacus velit?
                                 </button>
                             </h2>
                             <div id="collapsefive" class="accordion-collapse collapse" aria-labelledby="headingfive"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
-                                    until the collapse
-                                    plugin adds the appropriate classes that we use to style each element. These classes
-                                    control the overall
-                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
-                                    any of this with
-                                    custom CSS or overriding our default variables. It's also worth noting that just
-                                    about any HTML can go
-                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <p class="pb-3 text-secondary fs-3">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit. Curabitur lacus velit,
+                                        ullamcorper sed vulputate at, porttitor
+                                        a sem. Lorem ipsum dolor sit amet,</p>
+                                    <p class="pb-3 text-secondary fs-3">Curabitur lacus velit, ullamcorper sed vulputate
+                                        at, porttitor a sem. Lorem ipsum
+                                        dolor sit amet,</p>
+                                    <p class="pb-3 text-secondary fs-3">Find out more information by <span
+                                            class="green-text">reading the license.</span>
+                                    </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingsix">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapsesix" aria-expanded="false" aria-controls="collapsesix">
-                                    Accordion Item #3
+                        <div class="accordion-item my-5 my-5">
+                            <h2 class="accordion-header m-0" id="headingsix">
+                                <button class="accordion-button border-0 collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapsesix" aria-expanded="false"
+                                    aria-controls="collapsesix">
+                                    Lorem sit amet, consectetur adipiscing eli Amet?
                                 </button>
                             </h2>
                             <div id="collapsesix" class="accordion-collapse collapse" aria-labelledby="headingsix"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
-                                    until the collapse
-                                    plugin adds the appropriate classes that we use to style each element. These classes
-                                    control the overall
-                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
-                                    any of this with
-                                    custom CSS or overriding our default variables. It's also worth noting that just
-                                    about any HTML can go
-                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <p class="pb-3 text-secondary fs-3">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit. Curabitur lacus velit,
+                                        ullamcorper sed vulputate at, porttitor
+                                        a sem. Lorem ipsum dolor sit amet,</p>
+                                    <p class="pb-3 text-secondary fs-3">Curabitur lacus velit, ullamcorper sed vulputate
+                                        at, porttitor a sem. Lorem ipsum
+                                        dolor sit amet,</p>
+                                    <p class="pb-3 text-secondary fs-3">Find out more information by <span
+                                            class="green-text">reading the license.</span>
+                                    </p>
                                 </div>
                             </div>
                         </div>
